# PCEGSE-RS

./: .gitignore  Cargo.toml  README.md  aa.drawio  collins.ps1  gavin.ps1  gavin_result.txt  krogan_core.ps1
data/: complex.txt  gene-expression.txt  main.py  test_ppi.txt
data/BioGRID/: BioGRID_label.txt
data/collins/: collins_clique.txt  collins_ebd.txt  collins_label.txt  complex.txt
data/dip/: dip_clique.txt  dip_label.txt
data/gavin/: gavin.txt  gavin_clique.txt  gavin_label.txt
data/krogan_core/: krogan_core.txt  krogan_core_clique.txt  krogan_core_label.txt
data/krogan_extended/: krogan_extended.txt  krogan_extended_clique.txt  krogan_extended_label.txt  main.py
data/mip/: mip.txt  mip_clique.txt  mip_label.txt
data/test/: complex.txt  test_clique.txt
evaluation/: match.py
src/: cen.rs  dag.rs  eva.rs  gene_expression.rs  go_finder.rs  graph.rs  lib.rs  matrix.rs  pcegs.rs
src/complex/: cgc.rs  graph.rs  mod.rs  node2vec.rs  union.rs  vec2node.rs
src/eps/: errors.rs  evaluation.rs  graph.rs  mod.rs  options.rs  rw.rs  utils.rs
utils/: cgc.ipynb  cgc.py  collins_sp.txt  figure.ipynb
