[package]
name = "essential_protein"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eva"
path = "bin/eva.rs"

[[bin]]
name = "cgc"
path = "bin/cgc.rs"

[[bin]]
name = "pcegs"
path = "bin/pcegs.rs"

[dependencies]
clustering = "0.2.1"
env_logger = "0.11.6"
log = "0.4.25"
logger = "0.4.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
once_cell = "1.21.3"
petgraph = "0.6.5"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
thiserror = "2.0.11"
